@@ -6,6 +6,11 @@ module Leapfrog
   # include for ActiveRecord::ConnectionAdapters::TableDefinition
   module UserColumns
     def users(*args)
+      puts "[Warn] Method users is deprecated. Usage userstamps insted."
+      userstamps(args)
+    end
+
+    def userstamps(*args)
       options = args.extract_options!
       self.column(:created_by, :integer, options)
       self.column(:updated_by, :integer, options)
@@ -19,10 +24,15 @@ module Leapfrog
       self.add_column table_name, :updated_by, :integer, options
     end
 
+    alias_method :add_userstamps, :add_users
+
     def remove_users(table_name)
       self.remove_column table_name, :created_by
       self.remove_column table_name, :updated_by
     end
+
+    alias_method :remove_userstamps, :remove_users
+    
   end
 end
 
