@@ -1,7 +1,9 @@
 == 0.2.3 released 2011-09-20
 
-* Fix fro development env.
+* Fix for development env.
   "config.cache_classes = false" in config/enviroments/development.rb
+
+  Migration method changed. ex. t.users -> t.userstamps
 
 == 0.2.2 released 2011-09-04
 
